apps/authelia/auth-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia-auth
  namespace: cluster
spec:
  parentRefs:
    - name: public-gateway
      namespace: cluster
      kind: Gateway
  hostnames:
    - api.anyflow.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: authelia
          port: 80
